crates/toml_edit/tests/snapshots/invalid/float/nan-incomplete-02.stderr
TOML parse error at line 1, column 22
  |
1 | nan-incomplete-02 = +na
  |                      ^^
invalid float, expected `nan`
